# OpenGLTemplate

./: .gitignore  CMakeLists.txt  README.md
include/learn/: mesh.h  model.h
src/: main.cpp
